--- a/src/Mint-Y/gtk-3.0/gtk.css
+++ b/src/Mint-Y/gtk-3.0/gtk.css
@@ -3444,15 +3444,19 @@ SynapseGuiViewVirgilio *:selected {
   .xfce4-panel.panel button.flat, .xfce4-panel.panel button.sidebar-button {
     color: #DADADA;
     background-color: rgba(57, 57, 57, 0);
-    border-radius: 0;
-    border: none; }
+    border-color: rgba(57, 57, 57, 0); }
     .xfce4-panel.panel button.flat:hover, .xfce4-panel.panel button.sidebar-button:hover {
-      border: none;
       background-color: #535353; }
     .xfce4-panel.panel button.flat:active, .xfce4-panel.panel button.sidebar-button:active, .xfce4-panel.panel button.flat:checked, .xfce4-panel.panel button.sidebar-button:checked {
       color: #ffffff;
-      border: none;
       background-color: #9ab87c; }
+
+#xfce4-power-manager-plugin {
+  padding-top: 3px;
+  padding-bottom: 3px; }
+
+#pulseaudio-button * {
+  -gtk-icon-transform: scale(0.8); }
 
 .gnome-panel-menu-bar button:not(#tasklist-button),
 .mate-panel-menu-bar button:not(#tasklist-button) {
